--- a/SOM Model.ipynb
+++ b/SOM Model.ipynb
@@ -16,7 +16,7 @@
     "from pylab import bone, pcolor, colorbar, plot, show\n",
     "\n",
     "# Import dataset:\n",
-    "df = pd.read_csv(r'C:\\Users\\alexnavarro\\OneDrive - Merchants Fleet Management\\Desktop\\Data Science\\SuperDataScience\\Deep Learning A-Z\\Self_Organizing_Maps\\Credit_Card_Applications.csv')"
+    "df = pd.read_csv(r'Credit_Card_Applications.csv')"
    ]
   },
   {
